# RTNeural

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: auto-format.yml  bench.yml  cmake.yml  coverage.yml  docs.yml  examples.yml  radsan.yml  tests.yml
RTNeural/: CMakeLists.txt  Layer.h  Model.h  ModelT.h  ModelT_Old.h  RTNeural.cpp  RTNeural.h  activation.h  common.h  config.h  dense.h  dense_eigen.h  gru.cpp  gru.h  gru_eigen.h  gru_xsimd.cpp  gru_xsimd.h  model_loader.h  torch_helpers.h
RTNeural/activation/: activation.h  activation_accelerate.h  activation_eigen.h  activation_xsimd.h
RTNeural/batchnorm/: batchnorm.h  batchnorm.tpp  batchnorm2d.h  batchnorm2d.tpp  batchnorm2d_eigen.h  batchnorm2d_eigen.tpp  batchnorm2d_xsimd.h  batchnorm2d_xsimd.tpp  batchnorm_eigen.h  batchnorm_eigen.tpp  batchnorm_xsimd.h  batchnorm_xsimd.tpp
RTNeural/conv1d/: conv1d.h  conv1d.tpp  conv1d_accelerate.h  conv1d_accelerate.tpp  conv1d_eigen.h  conv1d_eigen.tpp  conv1d_xsimd.h  conv1d_xsimd.tpp  strided_conv1d.h
RTNeural/conv1d_stateless/: conv1d_stateless.h  conv1d_stateless.tpp  conv1d_stateless_eigen.h  conv1d_stateless_eigen.tpp  conv1d_stateless_xsimd.h  conv1d_stateless_xsimd.tpp
RTNeural/conv2d/: conv2d.h  conv2d.tpp  conv2d_eigen.h  conv2d_eigen.tpp  conv2d_xsimd.h  conv2d_xsimd.tpp
RTNeural/dense/: dense.h  dense_accelerate.h  dense_eigen.h  dense_xsimd.h
RTNeural/gru/: gru.h  gru.tpp  gru_accelerate.h  gru_accelerate.tpp  gru_eigen.h  gru_eigen.tpp  gru_xsimd.h  gru_xsimd.tpp
RTNeural/lstm/: lstm.h  lstm.tpp  lstm_accelerate.h  lstm_accelerate.tpp  lstm_eigen.h  lstm_eigen.tpp  lstm_xsimd.h  lstm_xsimd.tpp
RTNeural/maths/: maths_eigen.h  maths_stl.h  maths_xsimd.h
RTNeural/xsimd-legacy/: README.md
RTNeural/xsimd-legacy/algorithms/: algorithms.hpp
bench/: CMakeLists.txt  bench_utils.hpp  layer_bench.cpp  layer_creator.hpp  model_bench.cpp  templated_bench.hpp
cmake/: CPM.cmake  CXXStandard.cmake  ChooseBackend.cmake  EnableAVX2.cmake  EnableCoverageFlags.cmake  SIMDExtensions.cmake  Sanitizers.cmake  Testing.cmake
doxygen/: Doxyfile  Makefile  header.html
examples/: CMakeLists.txt  README.md
examples/conv1d_stateless_example/: CMakeLists.txt  conv1d_stateless_example.cpp
examples/custom_layer_model/: CMakeLists.txt  GatedActivation_Eigen.h  GatedActivation_STL.h  GatedActivation_xsimd.h  custom_layer_model.cpp  test_net.json
examples/hello_rtneural/: CMakeLists.txt  Makefile  hello_rtneural.cpp
examples/rtneural_dynamic_model/: CMakeLists.txt  rtneural_dynamic_model.cpp
examples/rtneural_static_model/: CMakeLists.txt  rtneural_static_model.cpp
examples/torch/torch_conv1d/: torch_conv1d.cpp
examples/torch/torch_gru/: CMakeLists.txt  torch_gru.cpp
examples/torch_conv1d/: CMakeLists.txt  torch_conv1d.cpp
models/: bad_lstm.json  conv.json  conv1d_torch_group.json  conv1d_torch_group_6_3_3_1_3.json  conv1d_torch_group_6_3_4_10_3.json  conv1d_torch_group_6_6_1_1_6.json  conv1d_torch_stride_3.json  conv2d.json  conv_stateless.json  convtranspose1d_torch.json  dense.json  full_model.json  gru.json  gru_1d.json  gru_torch.json  gru_torch_converted.json  lstm.json  lstm_1d.json  lstm_torch.json  lstm_torch_converted.json  model_dense.json  pytorch.json  pytorch_imported.json
models/microtcn/: bn.json  conv1.json  relu.json  res.json
modules/Eigen/: CMakeLists.txt
modules/Eigen/Eigen/: Core  Eigenvalues  Geometry  QR  SparseQR
modules/Eigen/Eigen/src/Cholesky/: LDLT.h  LLT.h  LLT_LAPACKE.h
modules/Eigen/Eigen/src/Core/: ArithmeticSequence.h  Array.h  ArrayBase.h  ArrayWrapper.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  ConditionEstimator.h  CoreEvaluators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  Dot.h  ForceAlignedAccess.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  (+34 more)
python/: conv.py  conv1d_torch.py  conv1d_torch_group.py  conv1d_torch_stride.py  conv2d.py  conv_stateless.py  convtranspose1d_torch.py  convtranspose1d_torch_cc.py  dense.py  gru.py  gru_1d.py  gru_torch.py  lstm.py  lstm_1d.py  lstm_torch.py  microtcn.py  model_utils.py  model_utils_torch.py
src/: CMakeLists.txt  activation.h  gru.cpp  gru.h  gru_eigen.cpp  gru_eigen.h
test_data/: conv1d_torch_group_x_python.csv  conv1d_torch_group_y_python.csv  conv1d_torch_group_y_python_3_1.csv  conv1d_torch_group_y_python_4_10.csv  conv1d_torch_group_y_python_6_3_3_1_3.csv  conv1d_torch_group_y_python_6_3_4_10_3.csv  conv1d_torch_group_y_python_6_6_1_1_6.csv  conv1d_torch_y_python.csv  conv1d_torch_y_python_stride_3.csv  conv2d_x_python.csv  conv2d_y_python.csv  conv_stateless_x_python.csv  conv_stateless_y_python.csv  conv_x_python.csv  conv_y_python.csv  convtranspose1d_torch_x_python.csv  convtranspose1d_torch_y_python.csv  convtranspose1d_torch_y_python_cc.csv  dense_x_python.csv  dense_y_python.csv  gru_1d_y_python.csv  gru_torch_y_python.csv  gru_y_python.csv  lstm_1d_y_python.csv  lstm_torch_y_python.csv  lstm_x_python.csv  lstm_y_python.csv  microtcn_x.csv  microtcn_y.csv  pytorch_tf_y.csv  pytorch_x.csv  pytorch_y.csv
tests/: CMakeLists.txt  README.md  approx_tests.hpp  bad_model_test.hpp  conv2d_model.h  dense.cpp  gru.cpp  load_csv.hpp  model_loader.hpp  model_test.hpp  modelt_test.h  pytorch_imported_test.hpp  sample_rate_rnn_test.hpp  templated_tests.hpp  test_configs.hpp  tests.cpp  torch_conv1d_group_test.hpp  torch_conv1d_test.hpp  torch_gru_test.hpp  torch_lstm_test.hpp  torch_microtcn_test.hpp  util_tests.h  util_tests.hpp
tests/functional/: CMakeLists.txt  bad_model_test.cpp  conv2d_model_test.cpp  load_csv.hpp  model_test.cpp  sample_rate_rnn_test.cpp  templated_tests.cpp  test_configs.hpp  test_maths_provider.hpp  torch_conv1d_groups_test.cpp  torch_conv1d_stride_test.cpp  torch_conv1d_test.cpp  torch_convtranspose1d_test.cpp  torch_gru_test.cpp  torch_lstm_test.cpp  torch_microtcn_test.cpp
tests/unit/: CMakeLists.txt  activation_test.cpp
(+180 files in other folders)
